--- a/Bootstrap/Grid.html
+++ b/Bootstrap/Grid.html
@@ -22,11 +22,11 @@
 
         </div>
         <div class="row justify-content-between align-items-streacht my-row">
-            <div class="col-4 order-md-12 my-col">
+            <div class="col-4 order-md-12 my-col  offset-md-2">
                 row2 col1
 
             </div>
-            <div class="col-4 my-col align-self-start order-md-2">
+            <div class="col-4 my-col align-self-start order-md-2 offset-md-2">
                 row2 col2
 
             </div>
