Js stalker assignment added

--- a/5 introduction to Java script/JS stalker/index.html
+++ b/5 introduction to Java script/JS stalker/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction to  javascript 
-    </title>
+    <title>Js Stalker</title>
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>This is Introduction to java </h1>
+    <h1>This is Js stalker app</h1>
     
 </body>
 </html>
