--- a/8 java script basice Arrays/index.html
+++ b/8 java script basice Arrays/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>arrays</title>
+    <script src="intro to array.js"></script>
 </head>
 <body>
+    <h1>This is intoduction to arrays </h1>
     
 </body>
 </html>
