--- a/10 Intro to DOM/manupulating style/index.html
+++ b/10 Intro to DOM/manupulating style/index.html
@@ -16,6 +16,19 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTV0HrCMtiopzpSYiguLw2FTcM-jA3ZmcHXPOuaCdOcr83vG5OS&usqp=CAU" alt="">
 
 
+    <!-- working with text  -->
+    <ul>
+        <li>orchades</li>
+        <li>Rose </li>
+        <li>Tulips</li>
+
+
+        
+    </ul>
+
+
+
+
     <script src="style.js"></script>
 </body>
 </html>
